--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 <!--      alt=""-->
 <!--      style="min-width:100vw; min-height:100vh; width: auto; height: auto; object-fit: cover;"-->
 <!--    />-->
-    <img width="6000" height="3200" alt="" ngSrc="./assets/avatar/"
+    <img width="6000" [alt]="'Image of ' + dataService.languagePack.heading" height="3200" ngSrc="./assets/avatar/"
          ngSrcset="600w, 1000w, 1500w, 2000w, 2500w, 3000w, 6000w"/>
 <!--    <img width="6000" height="3200" alt="" ngSrc="./assets/avatar/" ngSrcset="2000w"/>-->
   </div>
