--- a/src/app/components/badge/badge.component.html
+++ b/src/app/components/badge/badge.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div #glow class="glow"></div>
   <div *ngIf="iconRef" class="icon">
-    <img [src]="iconRef" alt="" height="32">
+    <img [src]="iconRef" alt="icon badge" height="32">
   </div>
   <span *ngIf="iconClass" [class]="'icon pi ' + iconClass" [style]="{'color': iconColor}"></span>
   <span class="text"><ng-content></ng-content></span>
