--- a/src/app/components/chat-row/chat-row.component.html
+++ b/src/app/components/chat-row/chat-row.component.html
@@ -1,6 +1,6 @@
 <div class="img-container" [class.hidden]="followingMessage">
-  <img *ngIf="isLeft()" src="assets/chat-avatar/avatar.png" height="210" width="210" alt="">
-  <img *ngIf="!isLeft()" src="assets/chat-avatar/anonymous.svg" alt="">
+  <img *ngIf="isLeft()" src="assets/chat-avatar/avatar.png" [alt]="'Chat avatar of ' + dataService.languagePack.heading" height="210" width="210" >
+  <img *ngIf="!isLeft()" src="assets/chat-avatar/anonymous.svg" alt="Chat avatar of unregistered user">
 </div>
 <!--<div class="triangle background-gradient"></div>-->
 <div class="fake-triangle" [class.hidden]="followingMessage" [class.not-received]="!sent"></div>
