--- a/src/app/sections/sidebar/sidebar.component.html
+++ b/src/app/sections/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
 
 <div class="sidebar-container">
   <div id="lang-selector">
-    <p-speedDial [model]="dataService.languagesMenuItems" direction="down" showIcon="pi pi-language" class="language-speed-dial"
+    <p-speedDial [model]="languagesMenuItems" direction="down" showIcon="pi pi-language" class="language-speed-dial"
                  buttonClassName="language-button">
     </p-speedDial>
   </div>
