--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,17 @@
 <main #outest_container style="position: relative;">
   <div #backgroundImg id="background-img">
-<!--    <img-->
-<!--      srcset= "../assets/avatar_600.png 600w,-->
-<!--               ../assets/avatar_1000x533.png 1000w,-->
-<!--               ../assets/avatar_1500x800.png 1500w,-->
-<!--               ../assets/avatar_2000x1066.png 2000w,-->
-<!--               ../assets/avatar_2500x1333.png 2500w,-->
-<!--               ../assets/avatar_3000x1600.png 3000w,-->
-<!--               ../assets/avatar_6000x3200.png 6000w"-->
-<!--      sizes="100vw"-->
-<!--      src="../assets/avatar_600.png"-->
-<!--      alt=""-->
-<!--      style="min-width:100vw; min-height:100vh; width: auto; height: auto; object-fit: cover;"-->
-<!--    />-->
-    <img width="6000" [alt]="'Image of ' + dataService.languagePack.heading" height="3200" ngSrc="./assets/avatar/"
-         ngSrcset="600w, 1000w, 1500w, 2000w, 2500w, 3000w, 6000w"/>
-<!--    <img width="6000" height="3200" alt="" ngSrc="./assets/avatar/" ngSrcset="2000w"/>-->
+    <img
+      srcset= "./assets/avatar/600.png 600w,
+               ./assets/avatar/1000.png 1000w,
+               ./assets/avatar/1500.png 1500w,
+               ./assets/avatar/2000.png 2000w,
+               ./assets/avatar/2500.png 2500w,
+               ./assets/avatar/3000.png 3000w,
+               ./assets/avatar/6000.png 6000w"
+      sizes="100vw"
+      [alt]="'Image of ' + dataService.languagePack.heading"
+      fetchpriority="high" loading="eager"
+    />
   </div>
 
   <div class="progressbar-container"><div #progress_bar class="progressbar"></div></div>
