--- a/src/app/sections/sidebar/sidebar.component.html
+++ b/src/app/sections/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar-container" style="height: 100vh">
   <div id="navbar">
     <!-- (hover)="hovered = true" [extended]="hovered" -->
-    <navbar-dot #navbar_dot *ngFor="let section of dataService.languagePack.sections; index as i;" [section]="section" [active]="i===sectionActive">
+    <navbar-dot #navbar_dot *ngFor="let section of dataService.languagePack.sections; index as i;" [section]="section" [active]="i===sidebarService.sectionActive">
     </navbar-dot>
   </div>
 </div>
