--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,9 @@ body {
 html {
   /* Hide scrollbar for Chrome, Safari and Opera */
   &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    background: transparent;
     display: none;
   }
   /* Hide scrollbar for IE, Edge and Firefox */
