adjust timeline section to style of the whole website

--- a/src/app/components/timeline-card/timeline-card.component.scss
+++ b/src/app/components/timeline-card/timeline-card.component.scss
@@ -15,10 +15,10 @@
 
 .timeline-card-dark {
   @extend .card;
-  background: rgb(75,75,75);
-  color: #dcdcdc;
+  background: #262626;
+  color: white;
   .subheading {
-    color: #dedede;
+    color: #cbcbcb;
   }
 }
 
