--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -8,25 +8,25 @@
 <div id="perspective-div" style="display: flex; flex-direction: column; align-items: center">
   <!-- [class.rotated]="sidebar.hovered" -->
   <div class="content-container">
-    <heading-card id="education-start" [heading]="dataService.languagePack.education" type="light" styleClass="alarm-clock-animated"></heading-card>
+    <heading-card id="education-start" [heading]="dataService.languagePack.education" type="3" styleClass="alarm-clock-animated"></heading-card>
     <p-timeline id="eduction-tl" [value]="dataService.education" align="alternate" [style]="{'width': '87.5%', 'display': 'inline-block'}">
       <ng-template pTemplate="marker">
-        <span class="dot"></span>
+        <span class="dot shadow-4"></span>
       </ng-template>
       <ng-template pTemplate="content" let-educationItem>
-        <timeline-card type="light" [heading]="educationItem.heading" [subheading]="educationItem.subheading"
+        <timeline-card type="dark" [heading]="educationItem.heading" [subheading]="educationItem.subheading"
                        [content]="educationItem.content" [bulletPoints]="educationItem.bulletPoints" styleClass="alarm-clock-animated">
         </timeline-card>
       </ng-template>
       <ng-template pTemplate="opposite" let-educationItem>
-        <p-badge [value]="educationItem.date" size="large" styleClass="timeline-date-dark alarm-clock-animated"></p-badge>
+        <p-badge [value]="educationItem.date" size="large" styleClass="timeline-date-light alarm-clock-animated"></p-badge>
       </ng-template>
     </p-timeline>
 
-    <heading-card id="experience-start" [heading]="dataService.languagePack.experience" type="dark" styleClass="alarm-clock-animated"></heading-card>
+    <heading-card id="experience-start" [heading]="dataService.languagePack.experience" type="3" styleClass="alarm-clock-animated"></heading-card>
     <p-timeline id="experience-tl" [value]="dataService.experience" align="alternate" [style]="{'width': '87.5%', 'display': 'inline-block'}">
       <ng-template pTemplate="marker">
-        <span class="dot"></span>
+        <span class="dot shadow-4"></span>
       </ng-template>
       <ng-template pTemplate="content" let-experienceItem>
         <timeline-card type="dark" [heading]="experienceItem.heading" [subheading]="experienceItem.subheading"
