--- a/src/app/sections/footer-section/footer-section.component.scss
+++ b/src/app/sections/footer-section/footer-section.component.scss
@@ -1,8 +1,9 @@
 :host {
-  position: absolute;
+  position: fixed;
+  display: none;
+  opacity: 0;
   bottom: 0;
   left: 0;
-  display: block;
   width: 100%;
   padding: 2rem;
 }
@@ -22,8 +23,10 @@ footer {
 
 .button {
   padding: 1rem;
-  background: #262626;
+  //background: #262626;
   //backdrop-filter: blur(5px);
+  position: relative;
+  z-index: 10000;
   border-radius: 2rem;
   display: flex;
   flex-wrap: nowrap;
@@ -31,8 +34,14 @@ footer {
   align-items: center;
 
   color: white;
+  border: 1px solid white;
   font-size: 1rem;
-  box-shadow: 0 0 5px #a445b2, 0 0 5px #fa4299;
+
+  transition: background 300ms ease-in-out;
+
+  &:hover {
+    background: rgba(0, 0, 0, 0.3);
+  }
 }
 
 .text {
