--- a/src/app/sections/sidebar/sidebar.component.scss
+++ b/src/app/sections/sidebar/sidebar.component.scss
@@ -64,6 +64,8 @@
     background: rgba(0, 0, 0, 0);
     border: 1px solid #FFF;
 
+    transition: background 300ms ease-in-out;
+
     &:hover {
       background: rgba(0, 0, 0, 0.3);
     }
