set cursor: pointer on chat send button

--- a/src/app/sections/contact/contact.component.scss
+++ b/src/app/sections/contact/contact.component.scss
@@ -97,6 +97,7 @@ form {
     justify-content: center;
     align-items: center;
     border: 0;
+    cursor: pointer;
 
     transition: all .1s linear;
     &.invisible {
