inline title font & move css imports from index.html to styles.scss

--- a/src/app/sections/sidebar/sidebar.component.scss
+++ b/src/app/sections/sidebar/sidebar.component.scss
@@ -1,3 +1,5 @@
+@import url('https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/css/flag-icons.min.css');
+
 :host {
   position: absolute;
   z-index: 1000;
