--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -1,9 +1,8 @@
 #main-heading {
   color: #ffffff;
   font-size: 7vw;
-  letter-spacing: 1.5vw;
-  font-weight: 10;
-  font-family: Copperplate Gothic, serif;
+  letter-spacing: 2.2vw;
+  font-family: 'Balthazar', serif;
   margin-bottom: 3vh;
   @media (max-aspect-ratio: 1/1) {
     font-size: 9vw;
