propose 3 variants of the heading animation

--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -10,6 +10,9 @@
     letter-spacing: 0.8vw;
     margin-bottom: 0;
   }
+  .heading-letter {
+    display: inline-block;
+  }
 }
 #main-subheading {
   @extend #main-heading;
