--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -5,6 +5,7 @@
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   margin-bottom: 7vh;
+  user-select: none;
   @media (max-aspect-ratio: 1/1) {
     font-size: 13vw;
     letter-spacing: 0.8vw;
@@ -18,10 +19,26 @@
   font-style: italic;
   font-weight: 300;
   transform: translateX(-20vw);
+  margin-top: 0;
   @media (max-aspect-ratio: 1/1) {
     font-size: 3.5vw;
     margin-bottom: 10vh;
   }
+}
+
+.letter {
+  transform-origin: 40% 50%;
+  display: inline-block;
+}
+
+.heading-letter {
+  @extend .letter;
+  transform: rotateY(270deg);
+}
+
+.subheading-letter {
+  @extend .letter;
+  opacity: 0;
 }
 
 .content-container {
