--- a/src/app/components/navbar-dot/navbar-dot.component.scss
+++ b/src/app/components/navbar-dot/navbar-dot.component.scss
@@ -2,8 +2,8 @@
   height: 1.2rem;
   width: 1.2rem;
   border-radius: 50%;
-  border: 3px solid rgb(255, 255, 255);
-  transition: all .6s ease-in-out;
+  border: 2px solid rgb(255, 255, 255);
+  transition: all .1s ease-in-out;
   user-select: none;
 
   display: flex;
@@ -11,11 +11,15 @@
   justify-content: center;
   font-size: 0;
 
+  margin-top: calc(0.3rem / 2);
+  margin-bottom: calc(0.3rem / 2 );
+
   &:not(.extended):hover {
-    transition: all .1s ease-in-out;
     height: 1.5rem;
     width: 1.5rem;
-    border: 5px solid rgb(255, 255, 255);
+    margin-top: 0;
+    margin-bottom: 0;
+    border: 4px solid rgb(255, 255, 255);
     background: rgba(0, 0, 0, 0.3);
     cursor: pointer;
   }
