--- a/src/app/components/navbar-dot/navbar-dot.component.scss
+++ b/src/app/components/navbar-dot/navbar-dot.component.scss
@@ -27,45 +27,45 @@
   &.active:not(.extended) {
     background: #e134e8 !important;
   }
-  &.extended {
-    position: relative;
-    transition: all .4s ease-in-out;
-    width: 20rem;
-    height: 5rem;
-    margin: 0 3rem;
-    border-radius: 20px;
-    //transform: translateX(-4rem);
-    font-size: 1.3rem;
-    &.active {
-      border: 0;
-      &::before {
-        // code from: https://dev.to/afif/border-with-gradient-and-radius-387f
-        content: "";
-        position: absolute;
-        inset: 0;
-        border-radius: 20px;
-        padding: 5px;
-        margin: -5px;
-        background: linear-gradient(to right, #a445b2, #fa4299);
-        -webkit-mask:
-          linear-gradient(#fff 0 0) content-box,
-          linear-gradient(#fff 0 0);
-        -webkit-mask-composite: xor;
-        mask-composite: exclude;
-      }
-    }
-    &:hover {
-      width: 21rem;
-      margin: 0 1rem;
-      height: 5.3rem;
-      font-size: 1.4rem;
-      background: rgba(0, 0, 0, 0.3);
-      cursor: pointer;
-    }
-    span {
-      display: block;
-    }
-  }
+  //&.extended {
+  //  position: relative;
+  //  transition: all .4s ease-in-out;
+  //  width: 20rem;
+  //  height: 5rem;
+  //  margin: 0 3rem;
+  //  border-radius: 20px;
+  //  //transform: translateX(-4rem);
+  //  font-size: 1.3rem;
+  //  &.active {
+  //    border: 0;
+  //    &::before {
+  //      // code from: https://dev.to/afif/border-with-gradient-and-radius-387f
+  //      content: "";
+  //      position: absolute;
+  //      inset: 0;
+  //      border-radius: 20px;
+  //      padding: 5px;
+  //      margin: -5px;
+  //      background: linear-gradient(to right, #a445b2, #fa4299);
+  //      -webkit-mask:
+  //        linear-gradient(#fff 0 0) content-box,
+  //        linear-gradient(#fff 0 0);
+  //      -webkit-mask-composite: xor;
+  //      mask-composite: exclude;
+  //    }
+  //  }
+  //  &:hover {
+  //    width: 21rem;
+  //    margin: 0 1rem;
+  //    height: 5.3rem;
+  //    font-size: 1.4rem;
+  //    background: rgba(0, 0, 0, 0.3);
+  //    cursor: pointer;
+  //  }
+  //  span {
+  //    display: block;
+  //  }
+  //}
 }
 
 span {
