--- a/src/styles.scss
+++ b/src/styles.scss
@@ -77,30 +77,30 @@ html {
     box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.12), 0px 4px 5px rgba(0, 0, 0, 0.14), 0px 2px 4px -1px rgba(0, 0, 0, 0.2);
   }
 
-  /*******************************************************
-   *               Rotation calculations                 *
-   *******************************************************/
-  /* Input */
-  --side-content-width-visible-percent: calc(4/5);
-
-  /* Calculations */
-  --rotated-depth-percent: calc(sqrt(1 - pow(var(--side-content-width-visible-percent),2)));
-  /* alpha = acos(ancathete / hypotenuse) */
-  --rotate-angle: calc(acos(var(--side-content-width-visible-percent)));
-
-  /*
-    (180 - alpha) / 2
-    => result has to be subtracted from 180 again because of css rotation rules
-  */
-  --side-content-rotation: calc(180deg - (180deg - var(--rotate-angle)) / 2);
-  /*
-    a² = b² + c² - 2bc * cos(alpha)
-    a = √(b² + c² - 2bc * cos(alpha))
-    a = √(1² + 1² - 2 * cos(alpha))
-    a = √(2 - 2cos(alpha))
-  */
-  /*--side-content-length-percent: calc(2 - 2 * sqrt(cos(var(--rotate-angle))));*/
-  --side-content-length-percent: sqrt(2 - 2 * cos(var(--rotate-angle)));
+//  /*******************************************************
+//   *               Rotation calculations                 *
+//   *******************************************************/
+//  /* Input */
+//  --side-content-width-visible-percent: calc(4/5);
+//
+//  /* Calculations */
+//  --rotated-depth-percent: calc(sqrt(1 - pow(var(--side-content-width-visible-percent),2)));
+//  /* alpha = acos(ancathete / hypotenuse) */
+//  --rotate-angle: calc(acos(var(--side-content-width-visible-percent)));
+//
+//  /*
+//    (180 - alpha) / 2
+//    => result has to be subtracted from 180 again because of css rotation rules
+//  */
+//  --side-content-rotation: calc(180deg - (180deg - var(--rotate-angle)) / 2);
+//  /*
+//    a² = b² + c² - 2bc * cos(alpha)
+//    a = √(b² + c² - 2bc * cos(alpha))
+//    a = √(1² + 1² - 2 * cos(alpha))
+//    a = √(2 - 2cos(alpha))
+//  */
+//  /*--side-content-length-percent: calc(2 - 2 * sqrt(cos(var(--rotate-angle))));*/
+//  --side-content-length-percent: sqrt(2 - 2 * cos(var(--rotate-angle)));
 }
 
 /**
