--- a/src/app/components/about-card/about-card.component.scss
+++ b/src/app/components/about-card/about-card.component.scss
@@ -42,6 +42,12 @@
   border-radius: 1.5rem;
   padding: 2rem;
   background: #262626;
+  flex-grow: 1;
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-between;
 
   .icon-row {
     display: flex;
