--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -5,7 +5,11 @@
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   margin-bottom: 7vh;
+
+  // heading not selectable
   user-select: none;
+  cursor: default;
+
   @media (max-aspect-ratio: 1/1) {
     font-size: 13vw;
     letter-spacing: 0.8vw;
