--- a/src/app/components/skill-card/skill-card.component.html
+++ b/src/app/components/skill-card/skill-card.component.html
@@ -1,6 +1,7 @@
 <!--TODO remove-->
 <!--<div class="background"></div>-->
-<div class="container" (click)="rotated = !rotated" [class.card-rotated]="rotated">
+<!--(click)="rotated = !rotated"-->
+<div class="container" [class.card-rotated]="rotated">
     <div class="card-content front">
       <circle-progress [value]="rating" max="100" text-format="percent"></circle-progress>
       <div class="skill-title">{{ name }}</div>
