feat(CV-9): show static PDF on mobile devices

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,8 @@
-<div style="position: relative"> <!-- position: relative needed for absolute footer -->
-  <!-- Absolute and fixed control elements-->
-  <div #backgroundImgContainer id="background-img-container">
-    <img
-      [srcset]="dataService.getBackgroundSrcSet()"
-      sizes="100vw"
-      [alt]="'Image of ' + dataService.languagePack.heading"
-      fetchpriority="high" loading="eager"
-      (load)="onBackgroundLoaded()"
-    />
-    <img [src]="'data:image/jpg;base64,' + dataService.backgroundSettings.preview" alt="Preview of background image">
-  </div>
-  <div class="progressbar-container"><div #progress_bar class="progressbar"></div></div>
-  <sidebar></sidebar>
+<app-layout *ngIf="windowWidth >= 800; else mobileView"></app-layout>
 
-  <!-- Main content -->
-  <main>
-    <!-- Renders main-content with lang path parameter-->
-    <router-outlet></router-outlet>
-  </main>
+<ng-template #mobileView>
+  <object class="pdf-viewer" data="./assets/CV-static.pdf" type="application/pdf"></object>
+</ng-template>
 
-  <!-- Footer -->
-  <footer-section></footer-section>
-</div>
+<!-- Enable toasts -->
+<p-toast></p-toast>
