--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,39 +1,34 @@
-@use 'style/lenis';
-
-#background-img-container {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  z-index: -100;
-  display: flex;
-  img {
-    position: relative;
-    min-width:100vw;
-    min-height:100vh;
-    width: auto;
-    height: auto;
-    object-fit: cover;
-    color: transparent;
-    z-index: -80;
-    &:nth-child(2) {
-      z-index: -81;
-      // position both images on top of each other
-      transform: translateX(-100vw);
-    }
-  }
+.pdf-viewer {
+  height:100vh;
+  width:100vw;
 }
 
-.progressbar-container {
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  .progressbar {
-    position: relative;
-    width: 100%;
-    height: 0.5vh;
-    transform-origin: 0 50%;
-    background-image: linear-gradient(to right, #a445b2, #fa4299);
+// Toast styling
+:host::ng-deep {
+  .mobile-not-supported-toast {
+    $font-size: 0.6rem;
+    color: #262626;
+    border: solid #262626;
+    border-width: 0 0 0 3px;
+    font-size: $font-size;
+
+    .p-toast-message-icon {
+      font-size: $font-size;
+      infocircleicon {
+        color: #262626;
+        svg {
+          width: calc($font-size * 2);
+          height: calc($font-size * 2);
+        }
+      }
+    }
+
+    .p-toast-icon-close {
+      width: calc($font-size * 2);
+      height: calc($font-size * 2);
+      timesicon {
+        color: #262626;
+      }
+    }
   }
 }
