--- a/src/app/sections/sidebar/sidebar.component.scss
+++ b/src/app/sections/sidebar/sidebar.component.scss
@@ -8,7 +8,7 @@
 .sidebar-container {
   position: fixed;
   width: auto;
-  min-width: 5vw;
+  min-width: 5.5rem;
   max-width: 30vw;
   top: 0;
   right: 0;
