fix(CV-26): add cursor pointer to language button

--- a/src/app/sections/sidebar/sidebar.component.scss
+++ b/src/app/sections/sidebar/sidebar.component.scss
@@ -65,6 +65,8 @@
 
     transition: background 300ms ease-in-out;
 
+    cursor: pointer;
+
     &:hover {
       background: rgba(0, 0, 0, 0.3);
     }
